--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,8 @@ plugins:
   - jekyll-feed
   - pagemaster
 
+future: true
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
