--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: >-
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
-# menu settings
+# menu settings for this setting
 menu:
   - label: Profiles
     link: /profiles/
